syntax = "proto3";

package IT.WebServices.Fragments.Authorization.Payment.Paypal;

import "google/api/annotations.proto";
import "Protos/IT/WebServices/Fragments/Authorization/Payment/DataRecords.proto";
import "Protos/IT/WebServices/Fragments/Authorization/Payment/PaymentError.proto";

service PaypalInterface {
  rpc PaypalNewOwnSubscription (PaypalNewOwnSubscriptionRequest) returns (PaypalNewOwnSubscriptionResponse)
  {
    option (google.api.http) = {
      post: "/api/payment/paypal/subscription/new"
      body: "*"
    };
  }
}
  
message PaypalNewOwnSubscriptionRequest {
  string PaypalSubscriptionID = 1;
}
  
message PaypalNewOwnSubscriptionResponse {
  GenericSubscriptionRecord Record = 1;
  PaymentError Error = 2;
}
